# movie-viewer-tauri

./: .gitignore  README.md  chec_structure.sh  index.html  package-lock.json  package.json  setup.sh
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/hooks/: useClipboard.js
